--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root { --mavi: #6bc1f1 }
-header { background: url('img/headerbg.jpg') center/cover }
+header { background: url('img/holistic-healing2.png') center/cover }
 .bg-mavi { background-color: var(--mavi) }
 .bg-goy{background-color: #072035;}
 .bg-boz { background-color: #f1f1f1 }
